agrega funcion para capturar eventos y añade imagenes nuevas a assets

--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -18,7 +18,7 @@
           
               <img mat-card-image src="{{ card.imagen }}">
               <!-- <input [disabled]="state"> -->
-              <button pButton pRipple type="button" label="Info" [disabled]="state" (click)="jucarCarta(card.id, card.imagen)" class="p-button-raised p-button-info"></button>
+              <button pButton pRipple type="button" label="Apostar" [disabled]="state" (click)="jugarCarta(card.id, card.imagen)" class="p-button-raised p-button-info"></button>
 
           
           </mat-card>
