agrega cambios en tablero

--- a/src/app/components/sala/sala.component.html
+++ b/src/app/components/sala/sala.component.html
@@ -68,7 +68,7 @@
             </form>
                 <div class="row">
                     <div class="col-12 text-center">
-                      <button  pButton pRipple type="button" label="Crear Sala" (click)="validar()" class="p-button-outlined p-button-secondary" style="margin-bottom: 10px;"></button>   
+                      <button  pButton pRipple type="button" [disabled]="bloquerBoton" label="Crear Sala" (click)="validar()" class="p-button-outlined p-button-secondary" style="margin-bottom: 10px;"></button>   
                     </div>
                   </div>
               </div>
