--- a/src/app/components/salajugador/salajugador.component.html
+++ b/src/app/components/salajugador/salajugador.component.html
@@ -32,7 +32,7 @@
             <br>
 
             <button pButton pRipple style="margin-right: 1%;" *ngIf="jugadores.length <= 6" type="button"  label="Agregar Bot"  (click)="crearBot()" class="p-button-raised p-button-primary"></button>
-            <button pButton pRipple *ngIf="habilitarJuego" type="button"  label="Iniciar Juego"  (click)="iniciarJuego()" class="p-button-raised p-button-success"></button>
+            <button pButton pRipple *ngIf="userLogged==sesionLogeadaFirebase" type="button"  label="Iniciar Juego"  (click)="iniciarJuego()" class="p-button-raised p-button-success"></button>
            
         </div>
         <div class="col-4" style="text-align: center">
