--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -3,34 +3,39 @@
 <mat-divider></mat-divider>
 <br>
 <div class="container">
-  <div fxLayoutAlign="center">
-    <button mat-button color="warn" style="font-size: 30px;">{{cronometro}}</button>
+  <div fxLayoutAlign="center ">
+    <button mat-button color="warn" style="font-size: 40px;" class="reloj">{{cronometro}}</button>
   </div>
-  <div class="row" style="margin-top: 1%;">
-    <div class="col-6 scale-up-center " id="tablero">
-      <img mat-card-image src="{{cartaJugada}}">
+  <div class="row tablero" style="position: relative; left: 0; top: 0;">
+    <div class="col-2 scale-up-center">
+      <img mat-card-image src="{{cartaJugada}}" width="150px">
     </div>
-    <div class="col-6" fxLayoutAlign="center">
-
-      <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="30px">
-        <div fxFlex="35" fxFlex.lg="20" fxFlex.sm="30" *ngFor="let card of cartasJugador">
-          <mat-card style="margin-top: 20px;">
-            <mat-card-header>
-              <mat-card-title>{{ card.nombre }}</mat-card-title>
-              <mat-card-subtitle> Poder: {{ card.poder }}</mat-card-subtitle>
-            </mat-card-header>
-
-            <img mat-card-image src="{{ card.imagen }}">
-            <!-- <input [disabled]="state"> -->
-            <button pButton pRipple type="button" label="Apostar" [disabled]="deshabilitarApuesta"
-              (click)="jugarCarta(card.id, card.imagen)" class="p-button-raised p-button-info"></button>
-
-          </mat-card>
-        </div>
-      </div>
-
-    </div>
-
+    <br>
   </div>
 
+  <div class="col-12">
+    <p-carousel [value]="cartasJugador" styleClass="custom-carousel" [numVisible]="3" [numScroll]="1">
+      <ng-template pTemplate="header"> </ng-template>
+      <ng-template let-card pTemplate="item">
+
+        <div class="wrapper">
+          <div class="clash-card barbarian">
+            <div class="clash-card_image clash-card_image--barbarian">
+              <img src="{{ card.imagen }}" alt="barbarian" />
+            </div>
+            <div class="clash-card_level clash-card_level--barbarian">Poder: {{ card.poder }}</div>
+            <div class="clash-card__unit-name">{{ card.nombre }}</div>
+            <div class="clash-card_unit-stats clash-card_unit-stats--barbarian clearfix text-center">
+              <div class="one-third">
+                <div class="text-center">
+                  <button pButton pRipple type="button" label="Apostar" [disabled]="deshabilitarApuesta"
+                    (click)="jugarCarta(card.id, card.imagen)" class=" btn-apostar"></button>
+                </div>
+              </div>
+            </div>
+          </div> <!-- end clash-card barbarian-->
+        </div> <!-- end wrapper -->
+      </ng-template>
+    </p-carousel>
+  </div>
 </div>
