--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,20 +1,29 @@
 <app-header></app-header>
 
-
-<table mat-table [dataSource]="jugadores" class="mat-elevation-z8 demo-table">
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="jugador">
-        <th mat-header-cell *matHeaderCellDef>Jugador</th>
-        <td mat-cell *matCellDef="let element">{{element.name}}</td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="rondas-ganadas">
-        <th mat-header-cell *matHeaderCellDef>Rondas Ganadas</th>
-        <td mat-cell *matCellDef="let element">{{element.puntaje.value}}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div>
+    <div class="col-8" style="text-align: center;">
+        <p-table styleClass="p-datatable-gridlines" [value]="jugadores"  responsiveLayout="scroll">
+            <ng-template pTemplate="caption" >
+                Resumen
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Jugador</th>
+                    <th>Rondas Ganadas</th>
+                    <th>Sala</th>
+                    
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-jugador>
+                <tr>
+                    <td>{{jugador.jugadorId}}</td>
+                    <td>{{jugador.puntaje}}</td>
+                    <td>{{jugador.alias}}</td>
+                    
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+            </ng-template>
+        </p-table>
+    </div>
+</div>
